# mini-kernel

./: README.md  linker.ld  meson.build  qemu.sh
include/arch/: csr.h
include/kernel/: printf.h
src/: entry.S  kernel.c  meson.build  printf.c
